--- a/index.html
+++ b/index.html
@@ -2,96 +2,106 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Planejador Financeiro – Login</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <title>Planejamento Financeiro</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f7fa;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .card {
-      background: white;
-      padding: 24px;
-      border-radius: 10px;
-      width: 100%;
-      max-width: 400px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    h2 { text-align: center; }
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 12px;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 8px;
-      background: #4f46e5;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover { background: #4338ca; }
-    p { text-align: center; margin-top: 10px; }
+    body { font-family: Arial, sans-serif; background:#0f172a; color:#e5e7eb; padding:20px }
+    .box { background:#020617; padding:20px; border-radius:10px; margin-bottom:20px }
+    input, button { padding:10px; margin:5px 0; width:100% }
+    button { background:#22c55e; border:none; cursor:pointer; font-weight:bold }
+    h2 { margin-top:0 }
   </style>
 </head>
 <body>
 
-<div class="card">
-  <h2>🔐 Acesso ao Planejador</h2>
+  <div class="box" id="auth">
+    <h2>Login / Cadastro</h2>
+    <input id="email" type="email" placeholder="Email" />
+    <input id="password" type="password" placeholder="Senha" />
+    <button onclick="login()">Entrar</button>
+    <button onclick="register()">Criar conta</button>
+  </div>
 
-  <input type="email" id="email" placeholder="Email" />
-  <input type="password" id="senha" placeholder="Senha" />
+  <div class="box" id="app" style="display:none">
+    <h2>Adicionar valor guardado</h2>
+    <input id="valor" type="number" placeholder="Valor guardado no mês" />
+    <button onclick="guardar()">Adicionar</button>
 
-  <button onclick="cadastrar()">Criar conta</button>
-  <button onclick="login()">Entrar</button>
+    <h3>Caixinhas</h3>
+    <p>🏠 Casa (40%): R$ <span id="casa">0</span></p>
+    <p>🛡️ Segurança (35%): R$ <span id="seguranca">0</span></p>
+    <p>💍 Casamento (15%): R$ <span id="casamento">0</span></p>
+    <p>✈️ Viagem (10%): R$ <span id="viagem">0</span></p>
+  </div>
 
-  <p id="msg"></p>
-</div>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+  import { getFirestore, doc, getDoc, setDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-<script>
-  // 🔥 CONFIGURAÇÃO DO FIREBASE (VOCÊ VAI SUBSTITUIR)
-  const firebaseConfig = {
-    apiKey: "SUA_API_KEY",
-    authDomain: "SEU_AUTH_DOMAIN",
-    projectId: "SEU_PROJECT_ID",
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyAnobI5aAQbkmi4PQ-Rs8t2k_ciaPNuYDI",
+  authDomain: "planejador-financeiro-16ba8.firebaseapp.com",
+  projectId: "planejador-financeiro-16ba8",
+  storageBucket: "planejador-financeiro-16ba8.firebasestorage.app",
+  messagingSenderId: "929459673290",
+  appId: "1:929459673290:web:72f85dfb65825b5578bc33"
+};
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-
-  function cadastrar() {
-    const email = document.getElementById('email').value;
-    const senha = document.getElementById('senha').value;
-
-    auth.createUserWithEmailAndPassword(email, senha)
-      .then(() => {
-        document.getElementById('msg').innerText = 'Conta criada com sucesso!';
-      })
-      .catch(err => {
-        document.getElementById('msg').innerText = err.message;
-      });
+  window.login = async () => {
+    const email = email.value;
+    const password = password.value;
+    const user = await signInWithEmailAndPassword(auth, email, password);
+    carregar(user.user.uid);
   }
 
-  function login() {
-    const email = document.getElementById('email').value;
-    const senha = document.getElementById('senha').value;
+  window.register = async () => {
+    const user = await createUserWithEmailAndPassword(auth, email.value, password.value);
+    await setDoc(doc(db, "users", user.user.uid), {
+      casa: 0,
+      seguranca: 0,
+      casamento: 0,
+      viagem: 0
+    });
+    carregar(user.user.uid);
+  }
 
-    auth.signInWithEmailAndPassword(email, senha)
-      .then(() => {
-        window.location.href = 'dashboard.html';
-      })
-      .catch(err => {
-        document.getElementById('msg').innerText = err.message;
-      });
+  let uid;
+
+  async function carregar(id) {
+    uid = id;
+    document.getElementById('auth').style.display = 'none';
+    document.getElementById('app').style.display = 'block';
+
+    const ref = doc(db, "users", uid);
+    const snap = await getDoc(ref);
+    if (snap.exists()) atualizarTela(snap.data());
+  }
+
+  window.guardar = async () => {
+    const valor = Number(document.getElementById('valor').value);
+    const ref = doc(db, "users", uid);
+    const snap = await getDoc(ref);
+    const d = snap.data();
+
+    const novo = {
+      casa: d.casa + valor * 0.4,
+      seguranca: d.seguranca + valor * 0.35,
+      casamento: d.casamento + valor * 0.15,
+      viagem: d.viagem + valor * 0.1
+    }
+
+    await updateDoc(ref, novo);
+    atualizarTela(novo);
+  }
+
+  function atualizarTela(d) {
+    casa.innerText = d.casa.toFixed(2);
+    seguranca.innerText = d.seguranca.toFixed(2);
+    casamento.innerText = d.casamento.toFixed(2);
+    viagem.innerText = d.viagem.toFixed(2);
   }
 </script>
 
